erDiagram
    RECORRIDO_PARADA{
        int id_recorrido_parada PK
        int id_recorrido FK
        int id_parada FK
        int orden
    }
    
    PARADA_ATRACTIVO{
        int id_parada_atractivo PK
        int id_parada FK
        int id_atractivo FK

    }
    
    ATRACTIVO{
        int id_atractivo PK
        str nombre
        int calificacion
    }
    
    PARADA{
        int id_parada PK
        str nombre
        str direccion
        str descripcion
        str foto
    }

    RECORRIDO{
        int id_recorrido PK
        str color
        int frecuencia
        time hora_inicio
        time hora_finalizacion
        int duracion_aproximada
    }

    VIAJE{
        int id_viaje PK
        datetime fecha_hora_inicio_programada
        datetime fecha_hora_inicio_real
        datetime fecha_hora_fin_real
        int duracion_total
        int id_bus FK
        int legajo_chofer FK
        int id_recorrido FK
    }

    AUTOBUS{
        int id_bus PK
        str patente
        int numero_unidad
        date fecha_compra
        bool estado
    }
    
    CHOFER{
        int legajo PK
        str nombre
        str apellido
    }

    REPARACION {
        int id_reparacion PK
        int id_bus FK
        str descripcion
        datetime fecha_inicio
        datetime fecha_fin
    }

%%RELACIONES:

RECORRIDO ||--o{ RECORRIDO_PARADA : "posee"
PARADA ||--o{ PARADA_ATRACTIVO : "tiene"
PARADA ||--o{ RECORRIDO_PARADA : "pertenece"
ATRACTIVO ||--o{ PARADA_ATRACTIVO : "se encuentra cerca de"
RECORRIDO ||--o{ VIAJE : "se realiza en"
CHOFER ||--o{ VIAJE : "conduce"
AUTOBUS ||--o{ VIAJE : "realiza"
AUTOBUS ||--o{ REPARACION : "requiere"


